REST API refactoring.
